# devmarks-menubar

./: README.md  pyproject.toml  setup.py
devmarks_menubar/: main.py
